--- a/public/index.hbs
+++ b/public/index.hbs
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, user-scalable=no">
 	<title>PWA Demo App</title>
+	<link rel="manifest" href="./manifest.json">
 </head>
 <body>
 	<style>
