Adds offline notification

--- a/public/index.hbs
+++ b/public/index.hbs
@@ -13,6 +13,7 @@
 	</style>
 	<div class="content">
 		<div class="header">Reddit - Top posts</div>
+		<div id="offline-status-container">You are currently browsing offline.</div>
 		<div id="post-content">
 			<div class="post-placeholder">
 				<div class="placeholder-long"></div>
